--- a/src/app/components/tab/tab.component.scss
+++ b/src/app/components/tab/tab.component.scss
@@ -24,10 +24,9 @@
 }
 
 .clipboard {
-  height: calc(100vh - 48px);
+  height: 100%;
   user-select: none;
   &.clipboard-hover {
-    height: calc(100vh - 56px);
     border: 3px solid;
     box-shadow: inset 0 0 14px var(--color-primary), inset 0 0 16px var(--color-secondary);
     animation-name: rainbow;
